--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     <br>
     <p>OUR TOP CONTRIBUTERS</p>
     <br>
-    <button type="button" class="nes-btn is-success" style="background-color: lightseagreen;">1st Place</button>
+    <button type="button" class="nes-btn is-success" style="background-color: lightseagreen;">Dharshan</button>
     <br>
     <br>
-    <button type="button" class="nes-btn is-primary" style="background-color: green;">2st Place</button>
+    <button type="button" class="nes-btn is-primary" style="background-color: green;">Manish</button>
     <br>  
     <br>
     <button type="button" class="nes-btn is-primary" style="background-color:rgb(238, 203, 5);">3rd Place</button>
