--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
     <br>
     <br>
     <button type="button" class="nes-btn" style="background-color: red;">5th Place</button>
+     <br>
+    <br>
+    <button type="button" class="nes-btn" style="background-color: purple;">Oops! I'm Late :(</button>
   </div>
   
 </body>
