--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <button type="button" class="nes-btn is-success" style="background-color: lightseagreen;">1st Place</button>
     <br>
     <br>
-    <button type="button" class="nes-btn is-primary" style="background-color: green;">2st Place</button>
+    <button type="button" class="nes-btn is-primary" style="background-color: aqua;">2st Place</button>
     <br>  
     <br>
     <button type="button" class="nes-btn is-primary" style="background-color:rgb(238, 203, 5);">3rd Place</button>
