--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
     <button type="button" class="nes-btn is-primary" style="background-color: green;">2st Place</button>
     <br>  
     <br>
-    <button type="button" class="nes-btn is-primary" style="background-color:rgb(238, 203, 5);">3rd Place</button>
+    <button type="button" class="nes-btn is-primary" style="background-color:rgb(238, 204, 5);">3rd Place</button>
     <br>
     <br>
-    <button type="button" class="nes-btn" style="background-color: orange;">4th Place</button>
+    <button type="button" class="nes-btn" style="background-color: blue;">4th Place</button>
     <br>
     <br>
-    <button type="button" class="nes-btn" style="background-color: red;">5th Place</button>
+    <button type="button" class="nes-btn" style="background-color: green;">5th Place</button>
   </div>
   
 </body>
