update index . html

--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
     <button type="button" class="nes-btn is-success" style="background-color: lightseagreen;">1st Place</button>
     <br>
     <br>
-    <button type="button" class="nes-btn is-primary" style="background-color: green;">2st Place</button>
+    <button type="button" class="nes-btn is-primary" style="background-color: red;">2st Place</button>
     <br>  
     <br>
     <button type="button" class="nes-btn is-primary" style="background-color:rgb(238, 203, 5);">3rd Place</button>
     <br>
     <br>
-    <button type="button" class="nes-btn" style="background-color: orange;">4th Place</button>
+    <button type="button" class="nes-btn" style="background-color: yellow;">4th Place</button>
     <br>
     <br>
-    <button type="button" class="nes-btn" style="background-color: red;">5th Place</button>
+    <button type="button" class="nes-btn" style="background-color: black;">5th Place</button>
   </div>
   
 </body>
