--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
     <br>
     <p>OUR TOP CONTRIBUTERS</p>
     <br>
-    <button type="button" class="nes-btn is-success" style="background-color: lightseagreen;">1st Place</button>
+    <button type="button" class="nes-btn is-success" style="background-color: green;">1st Place</button>
     <br>
     <br>
-    <button type="button" class="nes-btn is-primary" style="background-color: green;">2st Place</button>
+    <button type="button" class="nes-btn is-primary" style="background-color: blue;">2st Place</button>
     <br>  
     <br>
-    <button type="button" class="nes-btn is-primary" style="background-color:rgb(238, 203, 5);">3rd Place</button>
+    <button type="button" class="nes-btn is-primary" style="background-color:rgb(238, 203, 8);">3rd Place</button>
     <br>
     <br>
     <button type="button" class="nes-btn" style="background-color: orange;">4th Place</button>
