--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 <body>
   <div class="nes-container with-title is-centered">
+      <h1> Welcome to HACKATHON </h1>
     <br>
     <p>OUR TOP CONTRIBUTERS</p>
     <br>
