--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
     <br>
     <br>
     <button type="button" class="nes-btn" style="background-color: red;">5th Place</button>
+    <br>
+    <button type="button" class="nes-btn" style="background-color: red;">6th Place</button>
   </div>
   
 </body>
