--- a/index.html
+++ b/index.html
@@ -16,19 +16,19 @@
     <br>
     <p>OUR TOP CONTRIBUTERS</p>
     <br>
-    <button type="button" class="nes-btn is-success" style="background-color: lightseagreen;">1st Place</button>
+    <button type="button" class="nes-btn is-good" style="background-color: lightseared;">1st Place</button>
     <br>
     <br>
-    <button type="button" class="nes-btn is-primary" style="background-color: green;">2st Place</button>
+    <button type="button" class="nes-btn is-primary choice" style="background-color: blue;">2st Place</button>
     <br>  
     <br>
-    <button type="button" class="nes-btn is-primary" style="background-color:rgb(238, 203, 5);">3rd Place</button>
+    <button type="button" class="nes-btn is-primary option" style="background-color:green;">3rd Place</button>
     <br>
     <br>
     <button type="button" class="nes-btn" style="background-color: orange;">4th Place</button>
     <br>
     <br>
-    <button type="button" class="nes-btn" style="background-color: red;">5th Place</button>
+    <button type="button" class="nes-btn" style="background-color:red;">5th Place</button>
   </div>
   
 </body>
