--- a/index.html
+++ b/index.html
@@ -16,19 +16,19 @@
     <br>
     <p>OUR TOP CONTRIBUTERS</p>
     <br>
-    <button type="button" class="nes-btn is-success" style="background-color: lightseagreen;">1st Place</button>
+    <button type="button" class="nes-btn is-success" style="background-color: lightseagreen;">ANUSHA S N</button>
     <br>
     <br>
-    <button type="button" class="nes-btn is-primary" style="background-color: green;">2st Place</button>
+    <button type="button" class="nes-btn is-primary" style="background-color: green;">ANUSHA S N </button>
     <br>  
     <br>
-    <button type="button" class="nes-btn is-primary" style="background-color:rgb(238, 203, 5);">3rd Place</button>
+    <button type="button" class="nes-btn is-primary" style="background-color:rgb(238, 203, 5);">ANUSHA S N</button>
     <br>
     <br>
-    <button type="button" class="nes-btn" style="background-color: orange;">4th Place</button>
+    <button type="button" class="nes-btn" style="background-color: orange;">ANUSHA S N</button>
     <br>
     <br>
-    <button type="button" class="nes-btn" style="background-color: red;">5th Place</button>
+    <button type="button" class="nes-btn" style="background-color: red;">ANUSHA S N</button>
   </div>
   
 </body>
