--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <button type="button" class="nes-btn" style="background-color: orange;">4th Place</button>
     <br>
     <br>
-    <button type="button" class="nes-btn" style="background-color: red;">5th Place</button>
+    <button type="button" class="nes-btn" style="background-color: white;">5th Place</button>
   </div>
   
 </body>
