--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <button type="button" class="nes-btn is-primary" style="background-color:rgb(238, 203, 5);">3rd Place</button>
     <br>
     <br>
-    <button type="button" class="nes-btn" style="background-color: orange;">4th Place</button>
+    <button type="button" class="nes-btn" style="background-color: yellow;">4th Place</button>
     <br>
     <br>
     <button type="button" class="nes-btn" style="background-color: red;">5th Place</button>
