--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <div class="nes-container with-title is-centered">
     <br>
     <p>OUR TOP CONTRIBUTERS</p>
+      <p>New change</p>
     <br>
     <button type="button" class="nes-btn is-success" style="background-color: lightseagreen;">1st Place</button>
     <br>
