--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <br>
     <p>OUR TOP CONTRIBUTERS</p>
     <br>
-    <button type="button" class="nes-btn is-success" style="background-color: lightseagreen;">1st Place</button>
-    <br>
+    <button type="button" class="nes-btn is-success" style="background-color: green;">1st place</button>
+    <br> 
     <br>
     <button type="button" class="nes-btn is-primary" style="background-color: green;">2st Place</button>
     <br>  
@@ -29,6 +29,8 @@
     <br>
     <br>
     <button type="button" class="nes-btn" style="background-color: red;">5th Place</button>
+      <br>
+    <button type="button" class="nes-btn" style="background-color: red;">6th Place</button>
   </div>
   
 </body>
